--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </div>
   </header>
   <div class="buttons">
-    <a class="afip" href="https://auth.afip.gob.ar/contribuyente_/login.xhtml" title="Comprobantes en línea" target="_blank">Generar comprobantes</a>
-    <a class="mail" href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNsLZhGqZnMwCPcknsRZDflwKmhfVPsmVgpGRWcdbcNtmLRFQzZZjSGqpLDkcMLTJWVfgB" title="Enviar comprobantes" target="_blank">Enviar comprobantes</a>
+    <a class="afip" href="https://auth.afip.gob.ar/contribuyente_/login.xhtml" target="_blank">Generar comprobantes</a>
+    <a class="mail" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">Enviar comprobantes</a>
   </div>
   <div class="details">
     <div class="detail-afip">
-        <ol>
+        <ol title="Detalle AFIP">
           <li>Tipo de comprobante: Factura C.</li>
           <li>Fecha del comprobante: Día de la fecha.</li>
           <li>Conceptos a incluir: Servicios.</li>
@@ -31,7 +31,7 @@
         </ol>
     </div>
     <div class="detail-mail">
-        <ol>
+        <ol title="Detalle Gmail">
           <li>Correo Electrónico:<br>administracion@desarrollointegradovm.gob.ar</li>
           <li>Asunto:"Factura (Mes)".</li>
           <li>Adjuntar comprobante.</li>
