--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <div class="detail-afip">
         <ol title="Detalle AFIP">
           <li>Tipo de comprobante: Factura C.</li>
-          <li>Fecha del comprobante: Día de la fecha.</li>
+          <li>Fecha del comprobante: Último día del mes.</li>
           <li>Conceptos a incluir: Servicios.</li>
+          <li>Período facturado: Primer día del mes -<br>Último día del mes.</li>
           <li>Condición frente al IVA: IVA Sujeto Exento.</li>
           <li>CUIT: 30999066727</li>
-          <li>Condiciones de Venta: Contado.</li>
+          <li>Condiciones de Venta: Cuenta Corriente.</li>
         </ol>
     </div>
     <div class="detail-mail">
