--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>Programa de Desarrollo Integrado</h1>
   </header>
   <div class="buttons">
-    <a class="afip" href="https://auth.afip.gob.ar/contribuyente_/login.xhtml" target="_blank">Generar comprobantes</a>
-    <a class="mail" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">Enviar comprobantes</a>
+    <a class="afip" href="https://auth.afip.gob.ar/contribuyente_/login.xhtml" target="_blank" rel="noopener noreferrer">Generar comprobantes</a>
+    <a class="mail" href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" rel="noopener noreferrer">Enviar comprobantes</a>
   </div>
   <div class="details">
     <div class="detail-afip">
